# Code-Refactoring-Agent

./: .dockerignore  .gitignore  Dockerfile  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  models.py
backend/app/agents/: architect.py  auditor.py  base.py  synthesizer.py
backend/app/db/: migrate.py  supabase_client.py
backend/app/mcp_server/: tools.py
backend/app/pipeline/: event_bus.py  orchestrator.py  sessions.py
backend/app/rag/: embeddings.py  ingestion.py  retriever.py
backend/app/routes/: guidelines.py  refactor.py  stream.py
backend/knowledge_base/: api_style_guide.md  error_handling_patterns.md  security_best_practices.md
backend/sql/: 001_init_vector_store.sql
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/input/: CodeEditor.jsx  ControlBar.jsx
frontend/src/components/layout/: Header.jsx  SplitPane.jsx
frontend/src/components/output/: AuditSummary.jsx  OutputTabs.jsx  RagGuidelines.jsx  RefactoredCode.jsx
frontend/src/components/stream/: AgentBadge.jsx  LiveTerminal.jsx
frontend/src/hooks/: useRefactor.js  useSSE.js
