[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.8.0",
    "mcp[cli]>=1.27.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.4",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
